--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,11 @@
 a {
-  color: #9affb5; }
+  color: #e7fded; }
 
 a:hover {
   color: #246369; }
+
+.heading-section {
+  background-color: #e7fded; }
 
 .navbar {
   background-color: #246369 !important; }
@@ -13,12 +16,12 @@ a:hover {
 .btn-own {
   color: #ffffff;
   background-color: #246369;
-  border: 2px solid #9affb5; }
+  border: 2px solid #e7fded; }
 
 .btn-own:hover {
   color: #ffffff;
   background-color: #45a384;
-  border: 2px solid #9affb5; }
+  border: 2px solid #e7fded; }
 
 .copyright {
   text-align: center;
